--- a/manuscript/response.Rmd
+++ b/manuscript/response.Rmd
@@ -111,7 +111,7 @@ Thank you for your constructive comments!
 
 >1. The paper is very US-focussed, and it sounds that NEON is unique in the world. However, there are examples of large and coordinated projects collecting observational data all over the world!  It would be good to mention some of them, here are some examples (very far from being exhaustive and not necessarily the ones to cite, but just to give some examples): Fundiv Europe (http://project.fundiveurope.eu/), Biodiversity Exploratories (https://www.biodiversity-exploratories.de/en/), UK National Biodiversity network (https://nbn.org.uk/tools-and-resources/useful-websites/database-of-wildlife-surveys-and-recording-schemes/), Brazilian Network of Networks (https://www.sciencedirect.com/science/article/pii/S2530064418300336), and surely many others.
 
-Thanks. TO DO: mention some of these networks in the Discussion and probably call for standardized version of them?
+This is an excellent suggestion for the paper, and we agree that mentioning these other networks will increase the paper's relevance to the broader global community. To this end, we have added this statement to the last sentence of the abstract, "...and encourage the use of the harmonized ecocomDP data design pattern for community ecology data from other ecological observatory networks." We have also added this sentence to the very end of the paper in the Conclusion section, "Finally, extension of the ecocomDP harmonized data design pattern to data from other ecological research and observatory networks (e.g., the Brazilian Network of Networks [Oliveira Roque et al. 2018], South African Environment Observation Network [Jaarsveld et al. 2007]) has the potential to enable community ecologists to better synthesize data from across the globe."
 
 >2. As it is, the paper targets an audience of readers that are familiar with NEON and data (re-)use in NEON. Maybe this is fine as I see that the paper is part of a “special feature”. But be aware that someone unfamiliar with NEON (like myself!) cannot really understand the paper, and this makes it look more like an “internal” manual than a paper for an international audience. The introduction goes from very general statements to a very short description of NEON (L.117) and then to very technical data issues, which is hard to understand without context. I generally missed a more detailed description of the data situation and procedures in NEON: how many datasets there are, what the data requirements are (e.g. what is the minimal information that is required when uploading a dataset), what data we are speaking about (occurrences/abundances/traits?), who collects the data, what is the data flow, how data is checked, where it is stored… It was hard for me to imagine how the data looks like pre-cleaning: is there a dataset per taxon and site and year? Or is there one dataset per taxa? Are these static or data is added to a dataset every year? What is the shape of the datasets, are they in the long format or are they siteXspecies matrices? Is this homogeneous or heterogeneous across taxa? What is standardised and what is not? This might be detailed in other papers (or obvious when accessing the data repository), but it is important to be described here (in the introduction or methods) in order to understand the rest of the text.
 
