--- a/manuscript/ref.bib
+++ b/manuscript/ref.bib
@@ -781,3 +781,14 @@
   year={2020},
   institution={NEON (National Ecological Observatory Network)}
 }
+
+@article{van2007south,
+  title={South African Environmental Observation Network: vision, design and status: SAEON reviews},
+  author={Van Jaarsveld, Albert S and Pauw, Johan C and Mundree, Sarasvathi and Mecenero, Silvia and Coetzee, Bernard WT and Alard, Glynn F},
+  journal={South African Journal of Science},
+  volume={103},
+  number={7},
+  pages={289--294},
+  year={2007},
+  publisher={Academy of Science for South Africa (ASSAf)}
+}
