--- a/manuscript/ref.bib
+++ b/manuscript/ref.bib
@@ -782,7 +782,6 @@
   institution={NEON (National Ecological Observatory Network)}
 }
 
-
 @article{van2007south,
   title={South African Environmental Observation Network: vision, design and status: SAEON reviews},
   author={Van Jaarsveld, Albert S and Pauw, Johan C and Mundree, Sarasvathi and Mecenero, Silvia and Coetzee, Bernard WT and Alard, Glynn F},
@@ -803,4 +802,25 @@
   pages={e03842},
   year={2021},
   publisher={Wiley Online Library}
+}
+
+@article{de2018warning,
+  title={Warning signals of biodiversity collapse across gradients of tropical forest loss},
+  author={de Oliveira Roque, Fabio and Menezes, Jorge FS and Northfield, Tobin and Ochoa-Quintero, Jose Manuel and Campbell, Mason J and Laurance, William F},
+  journal={Scientific reports},
+  volume={8},
+  number={1},
+  pages={1--7},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
+
+@article{o2021ecocomdp,
+  title={ecocomDP: a flexible data design pattern for ecological community survey data},
+  author={O'Brien, Margaret and Smith, Colin A and Sokol, Eric R and Gries, Corinna and Lany, Nina and Record, Sydne and Castorani, Max CN},
+  journal={Ecological Informatics},
+  volume={64},
+  pages={101374},
+  year={2021},
+  publisher={Elsevier}
 }
