--- a/manuscript/appendix.Rmd
+++ b/manuscript/appendix.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Appendix"
-author: Daijiang Li, Sydne Record, Eric Sokol, Matthew E. Bitters, Melissa Y. Chen,
-  Anny Y. Chung, Matthew R. Helmus, Ruvi Jaimes, Lara Jansen, Marta A. Jarzyna, Michael
+author: Daijiang Li, Sydne Record, Eric Sokol, Matthew E. Bitters, Melissa Y. Chen,  
+  Y. Anny Chung, Matthew R. Helmus, Ruvi Jaimes, Lara Jansen, Marta A. Jarzyna, Michael
   G. Just, Jalene M. LaMontagne, Brett Melbourne, Wynne Moss, Kari Norman, Stephanie
   Parker, Natalie Robinson, Bijan Seyednasrollah, Colin Smith, Sarah Spaulding, Thilina
   Surasinghe, Sarah Thomsen, Phoebe Zarnetske
