--- a/manuscript/ref.bib
+++ b/manuscript/ref.bib
@@ -824,3 +824,12 @@
   year={2021},
   publisher={Elsevier}
 }
+
+@article{li2021standardizedData,
+  title={Standardized NEON organismal data (neonDivData) ver 1},
+  author={Li, Daijiang and Record, Sydne and Sokol, Eric and Bitters, Matthew E and Chen, Melissa Y and Chung, Anny Y and Helmus, Matthew R and Jaimes, Ruvi and Jansen, Lara and Jarzyna, Marta A and others},
+  year={2022},
+  publisher={Environmental Data Initiative},
+  doi={10.6073/pasta/c28dd4f6e7989003505ea02e9a92afbf}
+}
+
