--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,10 @@ knitr::opts_chunk$set(
 )
 ```
 
+# Update of RELEASE-2025
+
+Note that Fish and By catch herp have not been updated this time. By catch herps likely will be removed in future release given their design was not suitable for diversity data. Fish data are currently under updating by NEON.
+
 # neonDivData
 
 <!-- badges: start -->
@@ -48,8 +52,6 @@ neonDivData::neon_location
 neonDivData::data_algae
 neonDivData::data_beetle
 neonDivData::data_bird
-neonDivData::data_fish
-neonDivData::data_herp_bycatch
 neonDivData::data_macroinvertebrate
 neonDivData::data_mosquito
 neonDivData::data_plant
